# fake_rotor

./: 2stm.cmd  Cargo.toml  README.md  d.cmd  size.cmd
.cargo/: config
src/: easycom.rs  interrupts.rs  main.rs  state.rs  switches.rs
